--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <h1>Belajar GIT Fundamental</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, explicabo.
+    </p>
   </body>
 </html>
