menambahkan tag span

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, explicabo.
     </p>
+
+    <span> Lorem ipsum dolor sit. </span>
   </body>
 </html>
